# zephyr

./: flash.sh  upf.md
drivers/bluetooth/hci/: spi.c
include/bluetooth/: att.h  gap.h  gatt.h
include/zephyr/bluetooth/: att.h  conn.h  gatt.h
samples/bluetooth/periodic_adv_conn/src/: main.c
samples/bluetooth/periodic_adv_rsp/src/: main.c
samples/bluetooth/periodic_sync_conn/src/: main.c
samples/bluetooth/peripheral_hr/: prj.conf
samples/bluetooth/peripheral_hr/src/: main.c
subsys/bluetooth/: Kconfig
subsys/bluetooth/controller/: Kconfig  Kconfig.ll_sw_split
subsys/bluetooth/host/: Kconfig  Kconfig.gatt  att.c  att_internal.h  conn.c  gatt.c  hci_core.c  l2cap.c  l2cap_internal.h  scan.c
subsys/bluetooth/services/ots/: ots_olcp.c
subsys/bluetooth/shell/: CMakeLists.txt  bt.c  gatt.c  l2cap.c  upf.c
subsys/shell/modules/: kernel_service.c
tests/bluetooth/bsim_bt/: compile.sh
tests/bluetooth/bsim_bt/bsim_test_att_rsp_nonseq/client/: CMakeLists.txt  prj.conf
tests/bluetooth/bsim_bt/bsim_test_att_rsp_nonseq/client/src/: gatt_client_test.c  main.c
tests/bluetooth/bsim_bt/bsim_test_auto_csf/: prj.conf
tests/bluetooth/bsim_bt/bsim_test_eatt/: CMakeLists.txt  prj_autoconnect.conf  prj_collision.conf  prj_gh_42306.conf
tests/bluetooth/bsim_bt/bsim_test_eatt_notif/: CMakeLists.txt  prj.conf
tests/bluetooth/bsim_bt/bsim_test_host/: CMakeLists.txt  prj_eatt.conf
tests/bluetooth/bsim_bt/bsim_test_notify_mult/: prj.conf
tests/bluetooth/entropy/: prj.conf  testcase.yaml
tests/bluetooth/entropy/src/: main.c
tests/bluetooth/shell/: prj.conf
(+40 files in other folders)
